welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
var biscuit : Boolean = false
def hunt(c:Color)
{
  avance()
	while (biscuit==false)
  {
		if (isFacingTrail(c))
    {
      avance()
      if (estSurBiscuit)
      {
				prendBiscuit()
        biscuit = true
      }
    }
    else
    {
			gauche()
    }
  }
}

 // here comes your isFacingTrail method
def isFacingTrail(couleur:Color) : Boolean = {
  var testCouleur : Color = void
  if (estFaceMur==true)
  {
    return false
  }
 	avance()
  testCouleur = getCouleurSol()
 	recule()
 	if (testCouleur == couleur)
  {
  	  return true
  }
  else
  { 
     return false
  }
}